crates/ir/tests/snapshots/lower_test__stdlib__map_collections.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__map_collections

import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(k) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
import core/map/empty as empty() -> Map[e9, f9]
import core/map/put as put(Map[i9, j9], i9, j9) -> Map[i9, j9]
import core/map/from_list as from_list(List[(c13, d13)]) -> Map[c13, d13]
import core/map/size as size(Map[j13, k13]) -> Int
import core/map/merge as merge(Map[q13, r13], Map[q13, r13]) -> Map[q13, r13]
declare empty: () -> Map[e9, f9]
declare from_list: (List[(c13, d13)]) -> Map[c13, d13]
declare merge: (Map[q13, r13], Map[q13, r13]) -> Map[q13, r13]
declare println: (k) -> Unit
declare put: (Map[i9, j9], i9, j9) -> Map[i9, j9]
declare size: (Map[j13, k13]) -> Int

fn main() -> Unit =
  let v1: Map[String, Int] = call empty()
  let v2: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v3: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v4: Map[String, Int] = call put(v2, v3, v1, "a", 1)
  let v5: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v6: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v0: Map[String, Int] = call put(v5, v6, v4, "b", 2)
  let v8: Map[String, Int] = call empty()
  let v9: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v10: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v7: Map[String, Int] = call put(v9, v10, v8, "c", 3)
  let v12: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v13: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v11: Map[String, Int] = call merge(v12, v13, v0, v7)
  let v14: Int = call size(v11)
  let v15: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v16: Unit = call println(v15, v14)
  let v18: (~String, ~Int) = tuple("x", 10)
  let v19: (~String, ~Int) = tuple("y", 20)
  let v20: (~String, ~Int) = tuple("z", 30)
  let v21: ~List[(~String, ~Int)] = construct List::Nil#1()
  let v22: ~List[(~String, ~Int)] = construct List::Cons#0(v20, v21)
  let v23: ~List[(~String, ~Int)] = construct List::Cons#0(v19, v22)
  let v24: ~List[(~String, ~Int)] = construct List::Cons#0(v18, v23)
  let v25: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v26: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v17: Map[~String, ~Int] = call from_list(v25, v26, v24)
  let v28: Int = call size(v17)
  let v27: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v29: Unit = call println(v27, v28)
  v29
