crates/ir/tests/snapshots/lower_test__stdlib__map_dict_singleton.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__map_dict_singleton

declare contains: (Dict, Dict, Map[j10, k10], j10) -> Bool
declare empty: () -> Map[n8, o8]
declare from_list: (Dict, Dict, List[(y12, z12)]) -> Map[y12, z12]
declare get: (Dict, Dict, Map[l9, y9], l9) -> Option[y9]
declare println: (Dict, m) -> Unit
declare put: (Dict, Dict, Map[s8, t8], s8, t8) -> Map[s8, t8]
declare size: (Map[f13, g13]) -> Int

fn main() -> Unit =
  let v1: Map[String, Int] = call empty()
  let v2: Dict = get_dict Eq[String]
  let v3: Dict = get_dict Hash[String]
  let v4: Map[String, Int] = call put(v2, v3, v1, "a", 42)
  let v5: Dict = get_dict Eq[String]
  let v6: Dict = get_dict Hash[String]
  let v0: Map[String, Int] = call put(v5, v6, v4, "b", 99)
  let_join v32(v15: Unit) =
    let v16: Dict = get_dict Eq[String]
    let v17: Dict = get_dict Hash[String]
    let v18: Bool = call contains(v16, v17, v0, "b")
    let v19: Dict = get_dict Show[Bool]
    let v20: Unit = call println(v19, v18)
    let v22: (~String, ~Int) = tuple("hello", 1)
    let v23: (~String, ~Int) = tuple("world", 2)
    let v24: ~List[(~String, ~Int)] = construct List::Nil#1()
    let v25: ~List[(~String, ~Int)] = construct List::Cons#0(v23, v24)
    let v26: ~List[(~String, ~Int)] = construct List::Cons#0(v22, v25)
    let v27: Dict = get_dict Eq[y12]
    let v28: Dict = get_dict Hash[y12]
    let v21: Map[String, Int] = call from_list(v27, v28, v26)
    let v29: Int = call size(v21)
    let v30: Dict = get_dict Show[Int]
    let v31: Unit = call println(v30, v29)
    v31
  in
  let v7: Dict = get_dict Eq[String]
  let v8: Dict = get_dict Hash[String]
  let v9: Option[Int] = call get(v7, v8, v0, "a")
  switch v9 {
    0 (v10: d) ->
      let v11: Dict = get_dict Show[Int]
      let v12: Unit = call println(v11, v10)
      jump v32(v12)
    1 ->
      let v13: Dict = get_dict Show[Int]
      let v14: Unit = call println(v13, 0)
      jump v32(v14)
  }
