crates/ir/tests/snapshots/lower_test__stdlib__map_immutable.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__map_immutable

import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(k) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
import core/map/empty as empty() -> Map[e9, f9]
import core/map/put as put(Map[i9, j9], i9, j9) -> Map[i9, j9]
import core/map/contains as contains(Map[n10, o10], n10) -> Bool
declare contains: (Map[n10, o10], n10) -> Bool
declare empty: () -> Map[e9, f9]
declare println: (k) -> Unit
declare put: (Map[i9, j9], i9, j9) -> Map[i9, j9]

fn main() -> Unit =
  let v0: Map[b11, c11] = call empty()
  let v2: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v3: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v1: Map[String, Int] = call put(v2, v3, v0, "x", 1)
  let v4: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v5: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v6: Bool = call contains(v4, v5, v0, "x")
  let v7: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v8: Unit = call println(v7, v6)
  let v10: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v11: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v12: Bool = call contains(v10, v11, v1, "x")
  let v9: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v13: Unit = call println(v9, v12)
  v13
