crates/ir/tests/snapshots/lower_test__stdlib__map_operations.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__map_operations

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/option/None as None(): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/list/Nil as Nil(): List[h]
import core/ordering/LT as LT(): Ordering
import core/ordering/EQ as EQ(): Ordering
import core/ordering/GT as GT(): Ordering
import core/map/empty as empty(): Map[m10, n10]
import core/map/put as put(Map[q10, r10], q10, r10): Map[q10, r10]
import core/map/delete as delete(Map[v11, w11], v11): Map[v11, w11]
import core/map/contains as contains(Map[d12, e12], d12): Bool
import core/map/size as size(Map[c15, d15]): Int
declare contains: (Map[d12, e12], d12) -> Bool
declare delete: (Map[v11, w11], v11) -> Map[v11, w11]
declare empty: () -> Map[m10, n10]
declare println: (o) -> Unit
declare put: (Map[q10, r10], q10, r10) -> Map[q10, r10]
declare size: (Map[c15, d15]) -> Int

fn main() -> Unit =
  let v1: Map[String, Int] = call empty()
  let v2: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v3: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v4: Map[String, Int] = call put(v2, v3, v1, "a", 10)
  let v5: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v6: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v0: Map[String, Int] = call put(v5, v6, v4, "b", 11)
  let v7: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v8: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v9: Bool = call contains(v7, v8, v0, "a")
  let v10: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v11: Unit = call println(v10, v9)
  let v13: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v14: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v12: Map[String, Int] = call delete(v13, v14, v0, "a")
  let v15: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v16: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v17: Bool = call contains(v15, v16, v12, "a")
  let v18: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v19: Unit = call println(v18, v17)
  let v21: Int = call size(v0)
  let v20: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v22: Unit = call println(v20, v21)
  v22
