crates/ir/tests/snapshots/lower_test__stdlib__multi_ord_constraint.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__multi_ord_constraint

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/option/Some as Some(e): Option[e]
import core/option/None as None(): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/list/Nil as Nil(): List[h]
import core/ordering/LT as LT(): Ordering
import core/ordering/EQ as EQ(): Ordering
import core/ordering/GT as GT(): Ordering
import core/io/println as println(o): Unit
declare println: (o) -> Unit

fn both_less(v0: Dict[core/ord.Ord, o8], v1: Dict[core/ord.Ord, p8], v2: o8, v3: o8, v4: p8, v5: p8) -> Bool =
  let_join v13(v6: Bool) =
    let_join v12(v8: Bool) =
      let_join v11(v10: Bool) =
        if v10 {
          v8
        } else {
          false
        }
      in
      jump v11(v6)
    in
    let v9: Bool = trait_call core/ord.Ord.lt(v1, v4, v5)
    jump v12(v9)
  in
  let v7: Bool = trait_call core/ord.Ord.lt(v0, v2, v3)
  jump v13(v7)

fn main() -> Unit =
  let v15: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
  let v16: Dict[core/ord.Ord, Float] = get_dict core/ord.Ord[Float]
  let v17: Bool = call both_less(v15, v16, 1, 2, 3.0, 4.0)
  let v18: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v19: String = trait_call core/show.Show.show(v18, v17)
  let v14: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v20: Unit = call println(v14, v19)
  v20
