crates/ir/tests/snapshots/lower_test__stdlib__platform_impl.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__platform_impl

type Wrapper = Wrapper#0(Int)
trait Describe[n8] { describe(n8): String }
instance stdlib__platform_impl.Describe[Wrapper] { describe=Describe$$Wrapper$$describe }
import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(k) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]

fn Describe$$Wrapper$$describe(v0: Wrapper) -> String =
  switch v0 {
    0 (v1: Int) ->
      let v2: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v3: String = trait_call core/show.Show.show(v2, v1)
      let v4: String = concat_string("jvm:", v3)
      v4
  }
